Updated config files to reflect current configs.

--- a/Configs/Kitty/theme.conf
+++ b/Configs/Kitty/theme.conf
@@ -36,7 +36,7 @@ color3               #d16f2e
 color4               #e18e56
 color5               #d16f2e
 color6               #3d7031
-#color7            
+color7               #bdd8b8
 #color8            
 #color9              
 #color10              
@@ -45,7 +45,5 @@ color6               #3d7031
 #color13             
 #color14            
 #color15        
-
-#b34435 #d16f2e #e18e56
 
 
