Changed theme Changed general color and layout themes of waybar, sway, eww, and kitty.

--- a/Configs/Kitty/theme.conf
+++ b/Configs/Kitty/theme.conf
@@ -18,25 +18,25 @@ font_size 12
 # Just a keybind to change font size to your liking, it's CTRL + scroll wheel up or down.
 #map ctrl+shift+plus change_font_size all +1.0
 #map ctrl+shift+minus change font size all -1.0
-background_opacity 0.9
+background_opacity 0.875
 
 # Colors
-cursor               #B52697
+cursor               #30a17a
 
-selection_background #691958
+selection_background #0f4436
 selection_foreground #bdd8b8
 
-background           #1f150d
-foreground           #bdd8b8
+background           #161815
+foreground           #cae3b4
 
 #color0              
-color1               #b34435
-color2               #d16f2e
-color3               #d16f2e
-color4               #e18e56
-color5               #d16f2e
-color6               #3d7031
-color7               #bdd8b8
+color1               #43844c
+color2               #92a565
+#color3
+color4               #3d7031
+color5               #92a565
+color6               #61723c
+#color7
 #color8            
 #color9              
 #color10              
