Edited Config Files and added Pictures. Changed Config Files and added Pictures.

--- a/Configs/Kitty/kitty.conf
+++ b/Configs/Kitty/kitty.conf
@@ -1,5 +1,5 @@
-# BEGIN_KITTY_THEME
 include theme.conf
 
+# Disables the bell sound when a backspace is
+# pressed when it is at the start of a line.
 enable_audio_bell no
-# END_KITTY_THEME
