--- a/Configs/Kitty/theme.conf
+++ b/Configs/Kitty/theme.conf
@@ -1,34 +1,27 @@
 font_family Monaspace Krypton
+font_size 12
 
-# Make the cursor shape a beam
 shell_integration no-cursor
 cursor_shape beam
 cursor_shape_unfocused beam
 
-# Padding
+# Padding - How far the text is from the edge of the termainl.
 window_padding_width 7
 window_padding_height 10
 
 # Scroll back up to 3000 lines.
 scrollback_lines 3000
 
-#Default font size.
-font_size 12
-
-# Just a keybind to change font size to your liking, it's CTRL + scroll wheel up or down.
-#map ctrl+shift+plus change_font_size all +1.0
-#map ctrl+shift+minus change font size all -1.0
 background_opacity 0.875
 
 # Colors
 cursor               #30a17a
-
 selection_background #0f4436
 selection_foreground #bdd8b8
-
 background           #161815
 foreground           #cae3b4
 
+# Default terminal colors.
 #color0              
 color1               #43844c
 color2               #92a565
